Fixed input align in IE

--- a/kinds/input/kind-input.styl
+++ b/kinds/input/kind-input.styl
@@ -18,4 +18,8 @@ $kind-input
   max-width: 100%
 
   cursor: text
-  vertical-align: baseline
+
+  if ie
+    vertical-align: middle
+  else
+    vertical-align: baseline
